--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+  - 2014/08/22: check constraints presence in transaction with deferred constraints (Simeon Movchan)
+
+v0.1.1
+  - 2014/07/29: Release 0.1.1 (bibendi)
   - 2014/07/29: fix postgres patches (bibendi)
 
 v0.1.0
