--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+  - 2014/10/21: fix make file, remove appraisal (bibendi)
+  - 2014/10/21: chore(readme): add dolly bage (bibendi)
+  - 2014/10/21: chore(tests): remove shippable (bibendi)
+  - 2014/10/21: chore(gemspec): add gem apress-gems (bibendi)
+  - 2014/10/21: tests(email): add validate specs (bibendi)
+
+v0.1.2
+  - 2014/08/22: Release 0.1.2 (bibendi)
   - 2014/08/22: check constraints presence in transaction with deferred constraints (Simeon Movchan)
 
 v0.1.1
